# vocab-cards-russian

./: pyproject.toml
vocab_cards_russian/: __init__.py  text_processing.py
